--- a/src/site-config.json
+++ b/src/site-config.json
@@ -1,11 +1,11 @@
 {
-  "title": "Quick Web | Tinogasta Labs",
-  "description": "A minimal, fast-loading template for building simple websites and landing pages. Perfect for showcasing information with a clean, lightweight design.",
+  "title": "www.tinogasta-labs",
+  "description": "www.tinogasta-labs description",
   "image": "/og.png",
   "meta": {
-    "keywords": ["astro", "tailwind", "typescript"]
+    "keywords": []
   },
   "author": {
-    "twitter": "@tinogasta-labs"
+    "twitter": "@my-user"
   }
 }
