footer & social links

--- a/src/site-config.json
+++ b/src/site-config.json
@@ -7,5 +7,9 @@
   },
   "author": {
     "twitter": "@tinogasta-labs"
+  },
+  "social": {
+    "github": "https://github.com/tinogasta-labs",
+    "email": "contact@tinogasta-labs.com"
   }
 }
