cfg: add contact email

--- a/src/site-config.json
+++ b/src/site-config.json
@@ -10,6 +10,6 @@
   },
   "social": {
     "github": "https://github.com/tinogasta-labs",
-    "email": "contact@tinogasta-labs.com"
+    "email": "tinogastalabs.ok@gmail.com"
   }
 }
