--- a/src/site-config.json
+++ b/src/site-config.json
@@ -3,7 +3,22 @@
   "description": "Building secure, high-performance applications for the community.",
   "image": "/og.png",
   "meta": {
-    "keywords": ["web development", "full stack", "programming", "tinogasta"]
+    "keywords": [
+      "web development",
+      "digital solutions",
+      "open-source tools",
+      "web applications",
+      "software development",
+      "Tinogasta Labs",
+      "secure applications",
+      "optimized tools",
+      "community-driven",
+      "open-source collaboration",
+      "high-performance solutions",
+      "technology innovation",
+      "Tinogasta",
+      "Catamarca"
+    ]
   },
   "author": {
     "twitter": "@tinogasta-labs"
