add contact email

--- a/src/site-config.json
+++ b/src/site-config.json
@@ -25,6 +25,6 @@
   },
   "social": {
     "github": "https://github.com/tinogasta-labs",
-    "email": "tinogastalabs.ok@gmail.com"
+    "email": "contact@tinolabs.top"
   }
 }
