update contact info

--- a/src/site-config.json
+++ b/src/site-config.json
@@ -25,6 +25,6 @@
   },
   "social": {
     "github": "https://github.com/tinogasta-labs",
-    "email": "contact@tinolabs.top"
+    "email": "tinolabs.ok@gmail.com"
   }
 }
