--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@astrojs/sitemap": "^3.3.0",
     "@tailwindcss/vite": "^4.0.17",
     "astro": "5.5.5",
+    "astro-compress": "^2.3.7",
     "tailwindcss": "^4.0.17"
   },
   "engines": {
